--- a/WatchList/WatchList.WebClient/wwwroot/css/site.css
+++ b/WatchList/WatchList.WebClient/wwwroot/css/site.css
@@ -5,6 +5,8 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  text-underline-offset: 20px;
+  text-decoration: underline;
 }
 
 /* Provide sufficient contrast against white background */
