--- a/WatchList/WatchList.WebClient/Views/Shared/_Layout.cshtml
+++ b/WatchList/WatchList.WebClient/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <h1 class="card-header">Watch List</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,7 +22,7 @@
                             <a class="navbar-brand text-white btn btn-dark " asp-area="" asp-controller="Home" asp-action="Index">View Shows</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-brand text-white btn btn-dark " asp-area="" asp-controller="Home" asp-action="AddShow">Add Show</a>
+                            <a class="navbar-brand text-white btn btn-dark mr-auto" asp-area="" asp-controller="Home" asp-action="AddShow">Add Show</a>
                         </li>
                     </ul>
                 </div>
