--- a/WatchList/WatchList.WebClient/Views/Shared/_Layout.cshtml
+++ b/WatchList/WatchList.WebClient/Views/Shared/_Layout.cshtml
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <h1 class="card-header">Watch List</h1>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 w-100">
+            <div class="container float-left">
+                <h1>
+                    <a class="card-header text-black-50 text-decoration-none float-left" asp-area="" asp-controller="Home" asp-action="Index">Watch List</a>
+                </h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +24,7 @@
                             <a class="navbar-brand text-white btn btn-dark " asp-area="" asp-controller="Home" asp-action="Index">View Shows</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-brand text-white btn btn-dark mr-auto" asp-area="" asp-controller="Home" asp-action="AddShow">Add Show</a>
+                            <a class="navbar-brand text-white btn btn-dark mr-auto float-right" asp-area="" asp-controller="Home" asp-action="AddShow">Add Show</a>
                         </li>
                     </ul>
                 </div>
